# augmented_containers_doc

./: .clang-format  CMakeLists.txt  README.md  augmented_deque_template.cpp  augmented_deque_template.html  augmented_deque_visualization.hpp  augmented_graph_template.cpp  augmented_graph_template.html  augmented_graph_visualization.hpp  augmented_rb2p_visualization.hpp  augmented_rb3p_visualization.hpp  augmented_sequence_template.cpp  augmented_sequence_template.html  graphviz.umd.js  input.css  server.py  tailwind.config.js  test.html
augmented_deque_examples/: accumulator_only_yield_one_value_string.hpp  empty.cpp  empty.hpp  find_by_heap_predicate.hpp  find_by_heap_predicate_generator.hpp  find_by_monotonic_predicate.hpp  projector_and_accumulator_yield_multiple_values.hpp  projector_and_accumulator_yield_multiple_views.cpp  projector_and_accumulator_yield_multiple_views.hpp  projector_and_accumulator_yield_one_value_int.cpp  projector_and_accumulator_yield_one_value_int.hpp  projector_and_accumulator_yield_one_value_string.hpp  projector_and_accumulator_yield_one_view.cpp  projector_and_accumulator_yield_one_view.hpp
augmented_graph_examples/: arbitrary_spanning_forest.hpp  empty.hpp  minimum_spanning_forest.hpp  minimum_spanning_forests.hpp  tree_diameter_and_centers.hpp  tree_jump_and_meet.hpp  tree_medians.hpp  tree_nearest_marked_vertexes.hpp
augmented_sequence_examples/: accumulator_yield_multiple_values.hpp  accumulator_yield_multiple_views.hpp  accumulator_yield_one_value.hpp  accumulator_yield_one_view.hpp  empty.hpp  find_by_heap_predicate.hpp  find_by_heap_predicate_generator.hpp  find_by_monotonic_predicate.hpp
d3-graphviz/: d3-graphviz.js.map
docs/: app.css
include/augmented_containers_doc/: augmented_deque_visualization.hpp  augmented_graph_visualization.hpp  augmented_rb2p_visualization.hpp  augmented_rb3p_visualization.hpp
include/augmented_containers_doc/augmented_deque_examples/: accumulator_only_yield_one_value_string.hpp  empty.hpp  find_by_heap_predicate.hpp  find_by_heap_predicate_generator.hpp  find_by_monotonic_predicate.hpp  projector_and_accumulator_yield_multiple_values.hpp  projector_and_accumulator_yield_multiple_views.hpp  projector_and_accumulator_yield_one_value_int.hpp  projector_and_accumulator_yield_one_value_string.hpp  projector_and_accumulator_yield_one_view.hpp
include/augmented_containers_doc/augmented_graph_examples/: arbitrary_spanning_forest.hpp  empty.hpp  minimum_spanning_forest.hpp  minimum_spanning_forests.hpp  tree_diameter_and_centers.hpp  tree_jump_and_meet.hpp  tree_medians.hpp  tree_nearest_marked_vertexes.hpp
include/augmented_containers_doc/augmented_sequence_examples/: accumulator_yield_multiple_values.hpp  accumulator_yield_multiple_views.hpp  accumulator_yield_one_value.hpp  accumulator_yield_one_view.hpp  empty.hpp  find_by_heap_predicate.hpp  find_by_heap_predicate_generator.hpp  find_by_monotonic_predicate.hpp
jquery/: jquery.js  jquery.min.js  jquery.min.map
src/augmented_containers_doc/: augmented_deque_template.cpp  augmented_graph_template.cpp  augmented_sequence_template.cpp
